<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myfirstapplication.MainActivity">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_profile"
        android:orderInCategory="200"
        android:title="@string/menu_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_account"
        android:orderInCategory="300"
        android:title="@string/menu_account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="400"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>



</menu>