<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment1">

    <ImageView
        android:id="@+id/estus_flask"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:src="@drawable/estus_flask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintStart_toEndOf="@id/buttonInFragment1"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_fragment_line1"
        android:background="@color/teal_700"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="@string/first_fragment_line2"
        android:textSize="@dimen/text_size"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />



    <Button
        android:id="@+id/buttonInFragment1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_fragment1"
        android:textSize="@dimen/text_button_size"
        app:layout_constraintBottom_toTopOf="@id/textview_second"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintEnd_toStartOf="@id/estus_flask"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonGoToFragment2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_fragment_2"
        android:textSize="@dimen/text_button_size"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>